--- a/admin/exportdados.html
+++ b/admin/exportdados.html
@@ -95,6 +95,7 @@
                 <div class="leftsidesettingsbar">
                     <a href="settings.html">Dados pessoais</a>
                     <a href="exportdados.html" class="optionselectedsettings" href="exportdados.html">Exportar dados</a>
+                    <a href="screenmode.html">Tela e Brilho</a>
                     <a onclick="sairdoprofile()">Sair</a>
                 </div>   
                 <div class="contentselectedoption">
