--- a/admin/orders.html
+++ b/admin/orders.html
@@ -35,7 +35,7 @@
             <div class="openmenumobile" onclick="abrirmenumobile()">
                 <i class="fa-solid fa-bars"></i>
             </div>
-            <h1>Planilha</h1>
+            <h1>Pedidos Pendentes</h1>
             <div class="profile">
                 <i class="fa-regular fa-bell" onclick="notificacaoopen()"></i>
 
