--- a/admin/planilhaexpenses.html
+++ b/admin/planilhaexpenses.html
@@ -130,7 +130,7 @@
                   </div>
                 </div>
               </div>
-              <div class="divTable">
+              <div class="divTable planilhaexpenses">
                 <table>
                   <thead class="titlecolumns">
                     <tr>
