--- a/admin/planilhaitems.html
+++ b/admin/planilhaitems.html
@@ -109,6 +109,10 @@
                         <label for="precocompra">Preço Compra</label>
                         <input type="number" id="precocompra" />
                       </div>
+                      <div class="divPrecoCompra boxitempla">
+                        <label for="custos">Custos</label>
+                        <input type="number" id="custos" />
+                      </div>
                       <div class="divPrecoRevenda boxitempla">
                         <label for="precorevenda">Preço Revenda</label>
                         <input type="number" id="precorevenda" />
@@ -136,8 +140,9 @@
                         <th class="columnNome">Nome</th>
                         <th class="columnDetalhe">Detalhe</th>
                         <th class="columnPrecoCompra">Preço Compra</th>
+                        <th class="columnPrecoCustos">Custos</th>
                         <th class="columnPrecoRevenda">Preço Revenda</th>
-                        <th class="columnQuantidadeCompra">Quantidade Compra</th>
+                        <th class="columnQuantidadeCompra">Quant. Compra</th>
                         <th class="columnLucroItem Estoque">Lucro</th>
                         <th class="columnAction"></th>
                       </tr>
