--- a/admin/settings.html
+++ b/admin/settings.html
@@ -94,6 +94,7 @@
                 <div class="leftsidesettingsbar">
                     <a href="settings.html" class="optionselectedsettings">Dados pessoais</a>
                     <a href="exportdados.html">Exportar dados</a>
+                    <a href="screenmode.html">Tela e Brilho</a>
                     <a onclick="sairdoprofile()">Sair</a>
                 </div>   
                 <div class="contentselectedoption">
