--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     <img src="./imgs/anel entrelaçado (1).jpeg" alt="">
                     <div class="text-prata">
                         <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Brinco Entrelaçado</h1>
+                        <h1 class="nome-prata">Anel Entrelaçado</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
@@ -301,7 +301,7 @@
                     <img src="./imgs/anel entrelaçado (1).jpeg" alt="">
                     <div class="text-prata">
                         <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Brinco Entrelaçado</h1>
+                        <h1 class="nome-prata">Anel Entrelaçado</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
@@ -569,7 +569,7 @@
                 <img src="./imgs/anel entrelaçado (1).jpeg" alt="">
                 <div class="text-prata">
                     <p class='novidade-loja'>Novo</p>
-                    <h1 class="nome-prata">Brinco Entrelaçado</h1>
+                    <h1 class="nome-prata">Anel Entrelaçado</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
@@ -619,7 +619,7 @@
                 <img src="./imgs/anel entrelaçado (1).jpeg" alt="">
                 <div class="text-prata">
                     <p class='novidade-loja'>Novo</p>
-                    <h1 class="nome-prata">Brinco Entrelaçado</h1>
+                    <h1 class="nome-prata">Anel Entrelaçado</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
