--- a/pratas.html
+++ b/pratas.html
@@ -231,7 +231,7 @@
                     <img src="./imgs/anel entrelaçado (1).jpeg" alt="">
                     <div class="text-prata">
                         <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Brinco Entrelaçado</h1>
+                        <h1 class="nome-prata">Anel Entrelaçado</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
