--- a/novidades.html
+++ b/novidades.html
@@ -168,6 +168,26 @@
         </section>
 
         <div class='estoque-prata'>
+            <a href="prata/colar-gravatinha.html">
+                <div class='item-prata'>
+                    <img src="./imgs/COLAR GRAVATINHA.jpeg" alt="">
+                    <div class="text-prata">
+                        <p class='novidade-loja'>Novo</p>
+                        <h1 class="nome-prata">Colar Gravatinha</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 130,00</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
             <a href="prata/anel-entrelacado.html">
                 <div class='item-prata'>
                     <img src="./imgs/anel entrelaçado (1).jpeg" alt="">
