--- a/pratas.html
+++ b/pratas.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="topcard">
                     <h1>PRATAS 925</h1>
-                    <p>56 Produtos</p>
+                    <p>57 Produtos</p>
                 </div>
                 <div>
                     <p class='desccard'>A Prata de Lei também é conhecida pelos brasileiros como Prata 925. Ambas são ideais para a fabricação de joias e têm grau de pureza de 92,5%, respectivamente, o que garante a qualidade, o brilho e a durabilidade de uma joia em prata.<br>Fonte: pratafina.com.br</p>
@@ -226,6 +226,26 @@
         </section>
 
         <div class='estoque-prata'>
+            <a href="prata/colar-gravatinha.html">
+                <div class='item-prata'>
+                    <img src="./imgs/COLAR GRAVATINHA.jpeg" alt="">
+                    <div class="text-prata">
+                        <p class='novidade-loja'>Novo</p>
+                        <h1 class="nome-prata">Colar Gravatinha</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 130,00</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
             <a href="prata/anel-entrelacado.html">
                 <div class='item-prata'>
                     <img src="./imgs/anel entrelaçado (1).jpeg" alt="">
