--- a/prata/colar-gravatinha.html
+++ b/prata/colar-gravatinha.html
@@ -135,7 +135,7 @@
                     </select></h2>
                     <div class='tamanhocenterleft'>
                         <h2 class="tamanhofrase">Selecione Tamanho: <select name="Tamanho" id="tamanho">
-                            <option value="Único">Único</option>
+                            <option value="45cm">45cm</option>
                         </select>
                         </h2>
                             <a href="../institucional/guia-de-tamanhos/colares.html" target="_blank"><u>Guia de Tamanhos</u></a>
