--- a/index.html
+++ b/index.html
@@ -336,17 +336,17 @@
                     </div>
                 </div>
             </a>
-            <a href="prata/brinco-argola-zirconia-cristais.html">
+            <a href="cetim/touca-de-cetim-dupla-face-azul-rosa.html">
                 <div class='item-prata'>
-                    <img src="./imgs/brinco-argola-zirconia-cristais (1).jpeg" alt="">
+                    <img src="./imgs/touca de cetim dupla face azul rosa (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Brinco Argola Zircônia Cristais</h1>
+                        <p class='novidade-loja'>Disponível</p>
+                        <h1 class="nome-prata">Touca de Cetim Dupla Face Azul e Rosa</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
                         <div class="promocao">
-                            <p class="preço-loja">R$45,00 -- R$ 55,00</p>
+                            <p class="preço-loja">R$ 22,50</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
@@ -534,17 +534,17 @@
                 </div>
             </div>
         </a> 
-        <a href="prata/brinco-argola-zirconia-cristais.html">
+        <a href="cetim/touca-de-cetim-dupla-face-azul-rosa.html">
             <div class='item-prata'>
-                <img src="./imgs/brinco-argola-zirconia-cristais (1).jpeg" alt="">
+                <img src="./imgs/touca de cetim dupla face azul rosa (1).jpeg" alt="">
                 <div class="text-prata">
                     <p class='novidade-loja'>Disponível</p>
-                    <h1 class="nome-prata">Brinco Argola Zircônia Cristais</h1>
+                    <h1 class="nome-prata">Touca de Cetim Dupla Face Azul e Rosa</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
                     <div class="promocao">
-                        <p class="preço-loja">R$45,00 -- R$ 55,00</p>
+                        <p class="preço-loja">R$ 22,50</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
