--- a/pratas-brincos.html
+++ b/pratas-brincos.html
@@ -334,7 +334,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/brinco-argola-zirconia-cristais (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Disponível</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Brinco Argola Zircônia Cristais</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
