--- a/cetim-toucas.html
+++ b/cetim-toucas.html
@@ -175,6 +175,26 @@
         </section>
 
         <div class='estoque-prata'>
+            <a href="cetim/touca-de-cetim-dupla-face-azul-rosa.html">
+                <div class='item-prata'>
+                    <img src="./imgs/touca de cetim dupla face azul rosa (1).jpeg" alt="">
+                    <div class="text-prata">
+                        <p class='novidade-loja'>Disponível</p>
+                        <h1 class="nome-prata">Touca de Cetim Dupla Face Azul e Rosa</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 22,50</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
             <a href="cetim/touca-de-cetim-dupla-face-rosa-preta.html">
                 <div class='item-prata'>
                     <img src="./imgs/touca dupla face rosa e preta (1).jpeg" alt="">
@@ -195,26 +215,7 @@
                     </div>
                 </div>
             </a>
-            <a href="cetim/touca-de-cetim-dupla-face-azul-rosa.html">
-                <div class='item-prata'>
-                    <img src="./imgs/touca de cetim dupla face azul rosa (1).jpeg" alt="">
-                    <div class="text-prata">
-                        <p class='esgotado-loja'>ESGOTADO</p>
-                        <h1 class="nome-prata">Touca de Cetim Dupla Face Azul e Rosa</h1>
-                        <div class='estrelas'>
-                            <img src="imgs/Nenhuma estrela.png" alt="">
-                        </div>
-                        <div class="promocao">
-                            <p class="preço-loja">R$ 22,50</p>
-                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
-                        </div>
-                        <div class="botaocomprarprata">
-                            <label>VER DETALHES</label>
-                        </div>
-                         
-                    </div>
-                </div>
-            </a>
+
             <a href="cetim/touca-de-cetim-face-unica-bordo.html">
                 <div class='item-prata'>
                     <img src="./imgs/touca-cetim-face-unica-bordo (1).jpeg" alt="">
