--- a/cetim.html
+++ b/cetim.html
@@ -175,6 +175,26 @@
         </section>
 
         <div class='estoque-prata'>
+            <a href="cetim/touca-de-cetim-dupla-face-azul-rosa.html">
+                <div class='item-prata'>
+                    <img src="./imgs/touca de cetim dupla face azul rosa (1).jpeg" alt="">
+                    <div class="text-prata">
+                        <p class='novidade-loja'>Disponível</p>
+                        <h1 class="nome-prata">Touca de Cetim Dupla Face Azul e Rosa</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 22,50</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
             <a href="cetim/touca-de-cetim-dupla-face-rosa-preta.html">
                 <div class='item-prata'>
                     <img src="./imgs/touca dupla face rosa e preta (1).jpeg" alt="">
@@ -195,31 +215,12 @@
                     </div>
                 </div>
             </a>
-            <a href="cetim/scrunchie-de-cetim-vermelho.html">
-                <div class='item-prata'>
-                    <img src="./imgs/Scrunchie de cetim vermelho.jpeg" alt="">
-                    <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Scrunchie de Cetim Vermelho</h1>
-                        <div class='estrelas'>
-                            <img src="imgs/Nenhuma estrela.png" alt="">
-                        </div>
-                        <div class="promocao">
-                            <p class="preço-loja">R$ 5,00</p>
-                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
-                        </div>
-                        <div class="botaocomprarprata">
-                            <label>VER DETALHES</label>
-                        </div>
-                         
-                    </div>
-                </div>
-            </a>
+
             <a href="cetim/scrunchie-de-cetim-azul-claro.html">
                 <div class='item-prata'>
                     <img src="./imgs/scrunchie-azul-claro (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='novidade-loja'>Disponível</p>
                         <h1 class="nome-prata">Scrunchie de Cetim Azul Claro</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
@@ -235,17 +236,17 @@
                     </div>
                 </div>
             </a> 
-            <a href="cetim/touca-de-cetim-dupla-face-azul-rosa.html">
+            <a href="cetim/scrunchie-de-cetim-vermelho.html">
                 <div class='item-prata'>
-                    <img src="./imgs/touca de cetim dupla face azul rosa (1).jpeg" alt="">
+                    <img src="./imgs/Scrunchie de cetim vermelho.jpeg" alt="">
                     <div class="text-prata">
                         <p class='esgotado-loja'>ESGOTADO</p>
-                        <h1 class="nome-prata">Touca de Cetim Dupla Face Azul e Rosa</h1>
+                        <h1 class="nome-prata">Scrunchie de Cetim Vermelho</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
                         <div class="promocao">
-                            <p class="preço-loja">R$ 22,50</p>
+                            <p class="preço-loja">R$ 5,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
