--- a/cetim/scrunchie-de-cetim-dourado.html
+++ b/cetim/scrunchie-de-cetim-dourado.html
@@ -132,7 +132,7 @@
                 </div>
                 <div class='itensdesc'>
                     <p id='caminho'><a href="../index.html"> LARI'S</a> / <a href="../cetim-scrunchie.html">SCRUNCHIE</a> / <a href="">VERMELHO</a></p>
-                    <h1>Scrunchie de Cetim Vermelho</h1>
+                    <h1>Scrunchie de Cetim Dourado</h1>
                     <div class="avaliacoes">
                         <img src="../imgs/Nenhuma estrela.png" alt="">
                     </div>
