--- a/checkout.html
+++ b/checkout.html
@@ -295,7 +295,7 @@
                 <div>
                     <p class="leftsidemonetary">Subtotal:</p>
                 </div>
-                <p class="valuemonetary">${precototal}</p>
+                <p class="valuemonetary">R$ ${precototal}</p>
             </div>
             <div class="monetary">
                 <div>
@@ -313,7 +313,7 @@
                 <div>
                     <p class="leftsidemonetary">Total:</p>
                 </div>
-                <p>${precototal}</p>
+                <p>R$ ${precototal}</p>
             </div>
         </div>`
         }
