--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
             <div class='item-prata'>
                 <img src="./imgs/COLAR GRAVATINHA.jpeg" alt="">
                 <div class="text-prata">
-                    <p class='novidade-loja'>Novo</p>
+                    <p class='esgotado-loja'>ESGOTADO</p>
                     <h1 class="nome-prata">Colar Gravatinha</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
@@ -618,7 +618,7 @@
             <div class='item-prata'>
                 <img src="./imgs/COLAR GRAVATINHA.jpeg" alt="">
                 <div class="text-prata">
-                    <p class='novidade-loja'>Novo</p>
+                    <p class='esgotado-loja'>ESGOTADO</p>
                     <h1 class="nome-prata">Colar Gravatinha</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
