--- a/prata/brinco-heart.html
+++ b/prata/brinco-heart.html
@@ -141,8 +141,8 @@
                     </select></h2>
                     <div class='tamanhocenterleft'>
                         <h2 class="tamanhofrase">Selecione Tamanho: <select name="Tamanho" id="tamanho">
-                            <option value="Médio" selected>Médio (R$ 50,00)</option>
-                            <option value="Grande">Grande (R$ 55,00)</option>
+                            <option value="Médio" disabled>Médio (R$ 50,00) (ESGOTADO)</option>
+                            <option value="Grande" selected>Grande (R$ 55,00)</option>
                         </select>
                         </h2>
                             <a href="../institucional/guia-de-tamanhos/aneis.html" target="_blank"><u>Guia de Tamanhos</u></a>
