--- a/novidades.html
+++ b/novidades.html
@@ -172,7 +172,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/COLAR GRAVATINHA.jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Colar Gravatinha</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
@@ -475,7 +475,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/COLAR-ELOS-DE-CORAÇÃO.webp" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Colar Elos de Coração</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
