--- a/pratas-colares.html
+++ b/pratas-colares.html
@@ -225,26 +225,7 @@
         </section>
 
         <div class='estoque-prata'>
-            <a href="prata/colar-gravatinha.html">
-                <div class='item-prata'>
-                    <img src="./imgs/COLAR GRAVATINHA.jpeg" alt="">
-                    <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Colar Gravatinha</h1>
-                        <div class='estrelas'>
-                            <img src="imgs/Nenhuma estrela.png" alt="">
-                        </div>
-                        <div class="promocao">
-                            <p class="preço-loja">R$ 130,00</p>
-                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
-                        </div>
-                        <div class="botaocomprarprata">
-                            <label>VER DETALHES</label>
-                        </div>
-                         
-                    </div>
-                </div>
-            </a>
+
             <a href="prata/colar-veneziana.html">
                 <div class='item-prata'>
                     <img src="./imgs/colar veneziana (1).jpeg" alt="">
@@ -285,11 +266,31 @@
                     </div>
                 </div>
             </a>
+            <a href="prata/colar-gravatinha.html">
+                <div class='item-prata'>
+                    <img src="./imgs/COLAR GRAVATINHA.jpeg" alt="">
+                    <div class="text-prata">
+                        <p class='esgotado-loja'>ESGOTADO</p>
+                        <h1 class="nome-prata">Colar Gravatinha</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 130,00</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
             <a href="prata/colar-elos-de-coracao.html">
                 <div class='item-prata'>
                     <img src="./imgs/COLAR-ELOS-DE-CORAÇÃO.webp" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Colar Elos de Coração</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
