--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class='item-prata'>
                 <img src="./imgs/Pulseira-Detalhada (2).jpeg" alt="">
                 <div class="text-prata">
-                    <p class='novidade-loja'>Disponível</p>
+                    <p class='esgotado-loja'>ESGOTADO</p>
                     <h1 class="nome-prata">Pulseira Detalhada</h1>
                     <div class='estrelas'>
                         <img src="imgs/5 estrelas.png" alt="">
@@ -202,7 +202,7 @@
             <div class='item-prata'>
                 <img src="./imgs/Pulseira-Detalhada (2).jpeg" alt="">
                 <div class="text-prata">
-                    <p class='novidade-loja'>Disponível</p>
+                    <p class='esgotado-loja'>ESGOTADO</p>
                     <h1 class="nome-prata">Pulseira Detalhada</h1>
                     <div class='estrelas'>
                         <img src="imgs/5 estrelas.png" alt="">
@@ -233,7 +233,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/Pulseira-Detalhada (2).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Disponível</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Pulseira Detalhada</h1>
                         <div class='estrelas'>
                             <img src="imgs/5 estrelas.png" alt="">
@@ -279,7 +279,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/Pulseira-Detalhada (2).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Disponível</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Pulseira Detalhada</h1>
                         <div class='estrelas'>
                             <img src="imgs/5 estrelas.png" alt="">
