--- a/novidades.html
+++ b/novidades.html
@@ -962,7 +962,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/brinco-mini-mao-de-fatima (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='esgotado-loja'>ESGOTADO</p>
+                        <p class='novidade-loja'>Disponível</p>
                         <h1 class="nome-prata">Brinco Mini Mão de Fátima</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
