--- a/prata/pulseira-detalhada.html
+++ b/prata/pulseira-detalhada.html
@@ -152,8 +152,9 @@
                         </h2>
                             <a href="../institucional/guia-de-tamanhos/pulseiras.html" target="_blank"><u>Guia de Tamanhos</u></a>
                     </div>
-                    <label onclick="prata_pulseiradetalhada_comp()"><i class="fas fa-shopping-bag"></i> COMPRAR</label>
-                    <label id='cart' onclick="prata_pulseiradetalhada_enco()"><i class="fas fa-cart-plus"></i> ADICIONAR AO CARRINHO</label>
+                    <!--<label onclick="prata_pulseiradetalhada_comp()"><i class="fas fa-shopping-bag"></i> COMPRAR</label>
+                    <label id='cart' onclick="prata_pulseiradetalhada_enco()"><i class="fas fa-cart-plus"></i> ADICIONAR AO CARRINHO</label>!-->
+                    <label class="indisponivel" onclick="prata_pulseira_detalhada_indisponivel()"><i class="fas fa-shopping-bag"></i> AVISE-ME QUANDO CHEGAR</label>
                     <p id='entregue'>Este produto é vendido e entregue pela <a href=''>LARI'S</a>.</p>
 
                     <p class="compartilhar">Compartilhe: <a href='https://api.whatsapp.com/send/?text=https://laris-acessorios.netlify.app/prata/pulseira-detalhada.html' target="_blank"><i class="fa-brands fa-square-whatsapp"></i></a></p>
