Atualização do Estoque

--- a/pratas-aneis.html
+++ b/pratas-aneis.html
@@ -229,7 +229,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/anel entrelaçado (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='novidade-loja'>Disponível</p>
                         <h1 class="nome-prata">Anel Entrelaçado</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
@@ -269,7 +269,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/anel-cravejado-_1_.webp" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='novidade-loja'>Disponível</p>
                         <h1 class="nome-prata">Anel Cravejado</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
@@ -289,7 +289,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/anel-dois-em-um.webp" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='novidade-loja'>Disponível</p>
                         <h1 class="nome-prata">Anel Dois em Um</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
@@ -310,7 +310,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/anel-quadrado (3).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='novidade-loja'>Disponível</p>
                         <h1 class="nome-prata">Anel Quadrado</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
