--- a/micangas.html
+++ b/micangas.html
@@ -474,7 +474,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/phone-strap-smile.jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>NOVO</p>
+                        <p class='novidade-loja'>Disponível</p>
                         <h1 class="nome-prata">Phone Strap Smile</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
