--- a/pratas-brincos.html
+++ b/pratas-brincos.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="topcard">
                     <h1>BRINCOS</h1>
-                    <p>26 Produtos</p>
+                    <p>28 Produtos</p>
                 </div>
                 <div>
                     <p class='desccard'>A Prata de Lei também é conhecida pelos brasileiros como Prata 925. Ambas são ideais para a fabricação de joias e têm grau de pureza de 92,5%, respectivamente, o que garante a qualidade, o brilho e a durabilidade de uma joia em prata.<br>Fonte: pratafina.com.br</p>
@@ -225,6 +225,46 @@
         </section>
 
         <div class='estoque-prata'>
+            <a href="prata/brinco-coracao-vazado-pequeno.html">
+                <div class='item-prata'>
+                    <img src="./imgs/brinco-coração-vazado-pequeno.webp" alt="">
+                    <div class="text-prata">
+                        <p class='novidade-loja'>Novo</p>
+                        <h1 class="nome-prata">Brinco Coração Vazado Pequeno</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 25,00</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
+            <a href="prata/brinco-ponto-de-luz.html">
+                <div class='item-prata'>
+                    <img src="./imgs/BRINCO-PONTO-DE-LUZ.webp" alt="">
+                    <div class="text-prata">
+                        <p class='novidade-loja'>Novo</p>
+                        <h1 class="nome-prata">Brinco Ponto de Luz</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 25,00</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
             <a href="prata/brinco-mini-mao-de-fatima.html">
                 <div class='item-prata'>
                     <img src="./imgs/brinco-mini-mao-de-fatima (1).jpeg" alt="">
@@ -249,7 +289,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/BRINCO ARTICULADO (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='novidade-loja'>Disponível</p>
                         <h1 class="nome-prata">Brinco Articulado</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
@@ -269,7 +309,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/BRINCO COM VENEZIANA CRISTAL (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='novidade-loja'>Disponível</p>
                         <h1 class="nome-prata">Brinco com Veneziana Cristal</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
@@ -289,7 +329,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/brinco-earcuff-cristal-_1_.webp" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='novidade-loja'>Disponível</p>
                         <h1 class="nome-prata">Brinco Earcuff Cristal</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
@@ -311,7 +351,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/Brinco circular (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='novidade-loja'>Disponível</p>
                         <h1 class="nome-prata">Brinco Circular</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
@@ -331,7 +371,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/brinco-coração.webp" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='novidade-loja'>Disponível</p>
                         <h1 class="nome-prata">Brinco Heart</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
