--- a/pratas-piercing.html
+++ b/pratas-piercing.html
@@ -231,7 +231,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/piercing-argolinha-cristal (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='novidade-loja'>Disponível</p>
                         <h1 class="nome-prata">Piercing Argolinha Cristal</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
