--- a/pratas-pulseiras.html
+++ b/pratas-pulseiras.html
@@ -229,7 +229,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/PULSEIRA NOSSA SENHORA (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='novidade-loja'>Disponível</p>
                         <h1 class="nome-prata">Pulseira Nossa Senhora</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
